--- a/views/user/account/order-details.ejs
+++ b/views/user/account/order-details.ejs
@@ -14,13 +14,13 @@
 
     <%- include('../partials/userNavbar') %>
 
-    <section class="min-h-screen px-6 py-20 lg:px-12 lg:py-20 md-px-10 mt-8 space-y-4">
+    <section class="min-h-screen px-1 md:px-6 py-20 lg:px-12 lg:py-20 md-px-10 mt-8 space-y-4">
         <h1 class="text-2xl md:text-3xl text-teal-600 ml-10 mt-10">My Orders</h1>
 
         <div class="flex justify-between mt-10 p-10">
-            <button class="bg-gray-800 px-4 py-2 hover:bg-gray-900 transition text-white font-extralight">
-                Go to Orders
-            </button>
+            <a href="/order/details" class="bg-gray-800 px-4 py-2 hover:bg-gray-900 transition text-white font-extralight">
+              Go to Orders
+            </a>
             <button class="bg-teal-600 px-4 py-2 hover:bg-teal-700 transition text-white font-extralight">
                 <i class="fa-solid fa-file-invoice"></i>
                 Download Inoice
