--- a/views/user/account/order-success.ejs
+++ b/views/user/account/order-success.ejs
@@ -35,7 +35,7 @@
                 <a href="/order/details/<%= order._id %>" class="px-2 md:px-4 py-2 bg-gray-800 hover:bg-gray-900 transition text-xs md:text-sm flex items-center gap-1 text-white">
                     <i class="fa-solid fa-receipt"></i> View Order Datails
                 </a>
-                <a href="#" class="px-2 md:px-4 py-2 bg-teal-600 hover:bg-teal-700 transition text-xs md:text-sm flex items-center gap-1 text-white">
+                <a href="/shop" class="px-2 md:px-4 py-2 bg-teal-600 hover:bg-teal-700 transition text-xs md:text-sm flex items-center gap-1 text-white">
                     <i class="fa-solid fa-bag-shopping"></i> Continue Shopping
                 </a>
             </div>
