--- a/views/user/account/orders.ejs
+++ b/views/user/account/orders.ejs
@@ -14,7 +14,7 @@
 
     <%- include('../partials/userNavbar') %>
 
-    <section class="min-h-screen px-6 py-20 lg:px-12 lg:py-20 md-px-10 mt-8">
+    <section class="min-h-screen px-1 md:px-6 py-20 lg:px-12 lg:py-20 md-px-10 mt-8">
         <h1 class="text-2xl md:text-3xl text-teal-600 ml-10 mt-10">My Orders</h1>
 
 
