--- a/views/user/partials/userNavbar.ejs
+++ b/views/user/partials/userNavbar.ejs
@@ -74,7 +74,7 @@
                           <li><a href="/order/details" class="block px-4 py-2 hover:bg-gray-100 font-extralight">
                             <i class="fa-solid fa-bag-shopping mr-2"></i>Orders
                           </a></li>
-                          <li><a href="/user/wishlist" class="block px-4 py-2 hover:bg-gray-100 font-extralight">
+                          <li><a href="/wishlist" class="block px-4 py-2 hover:bg-gray-100 font-extralight">
                             <i class="fa-solid fa-heart mr-2"></i>Wishlist
                           </a></li>
                           <li><a href="/logout" class="block px-4 py-2 hover:bg-gray-100 text-red-600 font-extralight">
