--- a/views/user/account/checkout.ejs
+++ b/views/user/account/checkout.ejs
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </head>
 <body style="font-family:'Open Sans', sans-serif;">
 
@@ -61,7 +62,7 @@
             </h1>
             <input type="hidden" name="redirectTo" value="checkout">
 
-            <!-- address form fields -->
+            
             <div>
               <label class="block text-sm text-gray-700 mb-1">Full Name</label>
               <input type="text" name="name"
@@ -116,13 +117,11 @@
           </form>
         </div>
 
-        <!-- Grid Layout -->
+        
         <div class="grid md:grid-cols-3 gap-6 max-w-8xl mx-auto items-start">
 
-          <!-- Left side: address + products -->
           <div class="md:col-span-2 space-y-6">
 
-            <!-- Address Card -->
             <div class="bg-white shadow p-6">
               <% if (!user.addresses || user.addresses.length === 0) { %>
                 <p class="text-gray-500">
@@ -188,7 +187,6 @@
 
           </div>
 
-          <!-- Right side: Payment Summary -->
           <div class="bg-white shadow p-6 h-fit">
             <h2 class="text-xl font-semibold text-gray-800 mb-4">Payment Summary <span class="font-extralight">(<%= totalQuantity %> Items)</span></h2>
             <% if(cart && cart.items.length > 0) { %>
@@ -210,7 +208,7 @@
                 <span>₹<%= total.toLocaleString() %>.00</span>
               </div>
 
-              <form action="/order" method="POST">
+              <form id="checkoutForm" action="/order" method="POST">
                 <input type="hidden" name="addressId" value="<%= selectedAddress?._id %>">
                 <div class="mb-6">
                   <h3 class="text-lg font-semibold text-gray-700 mb-3">Payment Method</h3>
